fix z-index

--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -2,7 +2,7 @@
     height: 120px;
     background: #0E1414;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    z-index: 1;
+    z-index: 200;
 }
 
 .main .header {
